# audia

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: Makefile  conf.py  configuration.md  index.md  installation.md  quickstart.md  requirements.txt
docs/_build/doctrees/: changelog.doctree  configuration.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/_build/doctrees/api/: agents.doctree  audia.doctree  cli.doctree  config.doctree  storage.doctree  ui.doctree
docs/_build/doctrees/guides/: cli.doctree  llm_backends.doctree  pipeline.doctree  storage.doctree  tts_backends.doctree  web_ui.doctree
docs/_build/html/: .buildinfo  changelog.html  configuration.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/audia/: config.html
docs/_build/html/_modules/audia/agents/: graph.html  pdf_processor.html  research.html  state.html  stt.html  text_cleaner.html  tts.html
docs/_build/html/_modules/audia/storage/: database.html  models.html
docs/_build/html/_modules/audia/ui/: app.html
docs/_build/html/_modules/audia/ui/routes/: library.html  research.html  settings.html
docs/_build/html/_static/: copybutton.js  custom.css
docs/_build/html/api/: agents.html  audia.html  cli.html  config.html  storage.html  ui.html
docs/_build/html/guides/: cli.html  llm_backends.html  pipeline.html  storage.html  tts_backends.html  web_ui.html
docs/_static/: custom.css  theme_toggle.js
docs/api/: agents.md  audia.md  cli.md  config.md  storage.md  ui.md
docs/guides/: cli.md  llm_backends.md  pipeline.md  storage.md  tts_backends.md  web_ui.md
scripts/: explore_db.py  repair_paths.py
src/audia/: __init__.py  config.py
src/audia/agents/: __init__.py  graph.py  pdf_processor.py  research.py  state.py  stt.py  text_cleaner.py  tts.py
src/audia/cli/: app.py
src/audia/storage/: __init__.py  database.py  models.py
src/audia/ui/: app.py  jobs.py
src/audia/ui/routes/: convert.py  library.py  projects.py  research.py  settings.py
src/audia/ui/static/: app.js  index.html  styles.css
src/audia/ui/static/assets/: index-04cz9u-y.js  index-0gumK00H.js  index-6feWCGX9.css  index-B2s0rLc7.js  index-B4Y1OozC.js  index-BBVmPTub.css  index-BEnMPCbj.css  index-BG6rkwc-.js  index-BUN2HO5r.css  index-BdIMc0UN.js  index-BeKYqjUQ.css  index-BghCMHZh.css  index-BmOMXtAR.js  index-BxReqH0n.js  index-C-0XjkcH.js  index-CSpYpRvZ.css  index-CTLwKCNg.js  index-CbNRJ2qg.js  index-CnT5EFqU.css  index-DGCB57LV.css  index-DMJFe1OP.css  index-DSp_4Nhm.js  index-DXrzAAUb.js  index-FmXSEwRu.css  index-NYAHYjnI.css  index-gauKWTS3.js  index-kQc35wqw.js  index-re14OSDu.js  index-tbo9FrT0.css
tests/: conftest.py  test_api.py  test_async_jobs.py  test_cli.py  test_config.py  test_graph.py  test_pdf_processor.py  test_research.py  test_storage.py  test_stt.py  test_text_cleaner.py  test_tts.py
