[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audia"
version = "0.1.1"
description = "An agentic Python package that converts ideas and documents into audio – PDF papers, reports, and regulations turned into podcast-style audio files."
readme = "README.md"
authors = [
    {name = "Yauheniya Varabyova"}
]
maintainers = [
    {name = "Yauheniya Varabyova"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
keywords = ["audio", "tts", "stt", "pdf", "arxiv", "research", "speech", "langgraph", "agents"]
requires-python = ">=3.10"
dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.32.0",
    # PDF
    "PyMuPDF>=1.22.0",
    # Web / API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "aiofiles>=23.0",
    "httpx>=0.27",
    # CLI
    "typer>=0.12",
    "rich>=13.0",
    # Agents
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-core>=0.3",
    # Storage
    "sqlalchemy>=2.0",
    # ArXiv research
    "arxiv>=2.1",
    # TTS (default: edge-tts, no API key required)
    "edge-tts>=7.0",
    # Audio utilities
    "soundfile>=0.12",
    "numpy>=1.24",
    # LLM backends 
    "langchain-anthropic>=0.3", 
    "anthropic>=0.30",
    "langchain-openai>=0.2", 
    "openai>=1.30",
    # STT (voice input)
    "faster-whisper>=1.0", 
    "sounddevice>=0.4",
]

[project.optional-dependencies]
kokoro = ["kokoro>=0.9", "sounddevice>=0.4"]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-copybutton>=0.5",
    "myst-parser>=0.18",
]
dev = [
    "twine",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock",
    "black>=22.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "audia[kokoro]",
    "audia[docs]",
]

[project.scripts]
audia = "audia.cli.app:app"

[project.urls]
"Changelog" = "https://github.com/yauheniya-ai/audia/blob/main/CHANGELOG.md"
"Documentation" = "https://audia.readthedocs.io"
"Repository" = "https://github.com/yauheniya-ai/audia"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
audia = ["ui/static/**/*", "ui/templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["audia"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.setuptools]
include-package-data = true
